--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,7 +2,7 @@
 
 @import "reboot.scss";
 
-@import "frameworks.scss";
+@import "framework.scss";
 @import "grid.scss";
 @import "position.scss";
 
@@ -12,3 +12,16 @@
 @import "other/button.scss";
 @import "other/pagination.scss";
 @import "other/footer.scss";
+
+@import "item/advantage.scss";
+@import "item/service.scss";
+@import "item/task.scss";
+
+@import "blocks/content.scss";
+@import "blocks/header.scss";
+@import "blocks/partners.scss";
+@import "blocks/service.scss";
+@import "blocks/task.scss";
+@import "blocks/contact.scss";
+
+@import "section/news.scss";
