--- a/src/css/_framework.scss
+++ b/src/css/_framework.scss
@@ -11,9 +11,8 @@ html,body {
 }
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6{
-    font-family: 'Noto Serif';
-    font-weight: 400;
-    line-height: 1.2;
+    font-weight: 600;
+    line-height: 1.1;
     margin-bottom: 1rem;
 }
 * + h1, * + h2, * + h3, * + h4, * + h5, * + h6,
@@ -30,7 +29,7 @@ h1, h2, h3, h4, h5, h6,
 p {
     font-size: 1rem;
     margin-top: 0;
-    margin-bottom: 1.25rem;
+    margin-bottom: 1rem;
     line-height: 1.6;
     &.small{
         font-size: .9em;
@@ -67,7 +66,9 @@ a{
 .text-white{color: $white;}
 .text-black{color: $black;}
 .text-grey{color: $grey;}
-.text-pink{color: $pink;}
+.text-blue{color: $blue;}
+
+.text-nowrap{white-space: nowrap;}
 
 .text-uppercase{text-transform: uppercase;}
 .text-bold,strong,b{font-weight: 700;}
@@ -85,7 +86,7 @@ a{
 }
 
 .img-border{
-    border: 4px solid #655d6a;
+    border: 4px solid $light-grey;
 }
 
 .blockquote, blockquote{
@@ -97,6 +98,7 @@ a{
 .mt-0{margin-top: 0px;}
 .mt-30{margin-top: 30px;}
 .mt-60{margin-top: 60px;}
+
 .mb-0{margin-bottom: 0px;}
 .mb-30{margin-bottom: 30px;}
 .mb-60{margin-bottom: 60px;}
@@ -107,17 +109,36 @@ a{
 .pt-0{padding-top: 0px;}
 .pt-30{padding-top: 30px;}
 .pt-60{padding-top: 60px;}
+
 .pb-0{padding-bottom: 0px;}
 .pb-30{padding-bottom: 30px;}
 .pb-60{padding-bottom: 60px;}
 
-@media all and (max-width: map-get($grid-breakpoints, 'xl')){}
+@media all and (max-width: map-get($grid-breakpoints, 'xl')){
+    .d-xl-none{display: none;}
+
+    .mt-xl-0{margin-top: 0px;}
+    .mt-xl-30{margin-top: 30px;}
+    .mt-xl-60{margin-top: 60px;}
+
+    .mb-xl-0{margin-bottom: 0px;}
+    .mb-xl-30{margin-bottom: 30px;}
+    .mb-xl-60{margin-bottom: 60px;}
+	
+    .mr-xl-0{margin-right: 0}
+    .ml-xl-0{margin-left: 0}
+
+    .text-xl-left{text-align: left;}
+    .text-xl-center{text-align: center;}
+    .text-xl-right{text-align: right;}
+}
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
     .d-lg-none{display: none;}
 
     .mt-lg-0{margin-top: 0px;}
     .mt-lg-30{margin-top: 30px;}
     .mt-lg-60{margin-top: 60px;}
+
     .mb-lg-0{margin-bottom: 0px;}
     .mb-lg-30{margin-bottom: 30px;}
     .mb-lg-60{margin-bottom: 60px;}
@@ -135,6 +156,7 @@ a{
     .mt-md-0{margin-top: 0px;}
     .mt-md-30{margin-top: 30px;}
     .mt-md-60{margin-top: 60px;}
+
     .mb-md-0{margin-bottom: 0px;}
     .mb-md-30{margin-bottom: 30px;}
     .mb-md-60{margin-bottom: 60px;}
@@ -142,9 +164,6 @@ a{
     .mr-md-0{margin-right: 0}
     .ml-md-0{margin-left: 0}
 
-    .breadcrumbs{
-        margin-bottom: 0;
-    }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'sm')){
     .d-sm-none{display: none;}
@@ -160,11 +179,10 @@ a{
     .text-sm-center{text-align: center;}
     .text-sm-right{text-align: right;}
 
-    .text-sm-small{font-size: 12px;}
-
     .mt-sm-0{margin-top: 0;}
     .mt-sm-30{margin-top: 30px;}
     .mt-sm-60{margin-top: 60px;}
+
     .mb-sm-0{margin-bottom: 0px;}
     .mb-sm-30{margin-bottom: 30px;}
     .mb-sm-60{margin-bottom: 60px;}
