--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -1,11 +1,15 @@
 $white:                     #ffffff;
 $black:                     #000000;
-$light-grey:                #f6f6f6;
-$grey:                      #726d72;
-$dark-grey:                 #3d3e40;
+$light-grey:                #D1DFE0;
+$grey:                      #A5B5B7;
+$dark-grey:                 #1F2029;
+$blue:                      #0FB5BF;
+$dark-blue:                 #373540;
 
-$link-color:                #232323 !default;
-$link-hover-color:          #dd5287 !default;
+$bg-light:                  #E5F2F2;
+
+$link-color:                #1F2029 !default;
+$link-hover-color:          #0FB5BF !default;
 $link-decoration:           none !default;
 $link-hover-decoration:     underline !default;
 
@@ -24,7 +28,7 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1200px
+  xl: 1280px
 ) !default;
 
 $body-color:                #000000;
@@ -32,7 +36,6 @@ $body-bg:                   #ffffff;
 
 $font-family-base:            "Noto Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-base:            $font-family-sans-serif !default;
 
 $font-size-base:            1rem;
 $font-weight-base:          400;
