--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,6 +16,7 @@
 @import "item/advantage.scss";
 @import "item/service.scss";
 @import "item/task.scss";
+@import "item/slider.scss";
 
 @import "blocks/content.scss";
 @import "blocks/header.scss";
@@ -23,5 +24,7 @@
 @import "blocks/service.scss";
 @import "blocks/task.scss";
 @import "blocks/contact.scss";
+@import "blocks/project.scss";
 
+@import "section/title.scss";
 @import "section/news.scss";
